--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -55,15 +55,23 @@ text-align: justify}
 
 #Introduction
 
-Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of populations. It is an important factor in specialization events and is found in many sexually reproducing species of plants, invertebrates and vertebrates [@abbott_hybridization_2013], such as an ancient admixture event in the primate lineage between chimpanzees and bonobos [@manuel_chimpanzee_2016]. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010; @prufer_complete_2013; @fu_early_2015; @fu_genome_2014; @sankararaman_genomic_2014;@prufer_high-coverage_2017], as well as a second admixture event between Denisovans and Asian populations [@reich_genetic_2010; @meyer_high-coverage_2012; @sankararaman_combined_2016; @vernot_excavating_2016]. 
+Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of populations. It is an important factor in specialization *bp: what do you mean by that? speciation?* events and is found in many sexually reproducing species of plants, invertebrates and vertebrates [@abbott_hybridization_2013], such as an ancient admixture event in the primate lineage between chimpanzees and bonobos [@manuel_chimpanzee_2016]. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010; @prufer_complete_2013; @fu_early_2015; @fu_genome_2014; @sankararaman_genomic_2014;@prufer_high-coverage_2017], as well as a second admixture event between Denisovans and Asian populations [@reich_genetic_2010; @meyer_high-coverage_2012; @sankararaman_combined_2016; @vernot_excavating_2016]. 
 <!-- [could be expanded, e.g. referring to other systems where people look at admixture] -->
 <!-- speciation and hibridazation review [@abbott_hybridization_2013] -->
 <!-- chimp bonobo admixture [@manuel_chimpanzee_2016] -->
 
+*bp:this feels very thin. It's OK to motivate admixture as something that is widely
+present, but then you need to give a comprehensive introduction, not just a very
+incomplete list of papers. The alternative is to simply refer to a bunch of
+relevant reviews*
+
 ##Admixture on the genomic level and basic idea how to date it
-On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time, recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation [@falush_inference_2003]. Under a constant recombination rate, the length of introgressed segments should be inversely proportional to the time since the admixture event. Assuming that recombination events occurs according to a Poisson process, the fragment length distribution can be approximated by an exponential distribution, whose parameter is informative about the number of generations since the fragments entered the admixing population [@moorjani_history_2011;@pool_inference_2009; @gravel_population_2012]. Hence, the length distribution of introgressed chromosomal segments ('recombination clock') has been used to inferred the time since the admixture event [@moorjani_history_2011;@pugach_dating_2011; @sankararaman_date_2012;@loh_inferring_2013;@sankararaman_combined_2016;@pugach_gateway_2018;@jacobs_multiple_2019] 
+On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time, miotic recombination progressively breaks these introgressed segments down [@falush_inference_2003, @baird_etheridge_barton_2003]. 
+Assuming that recombination events occur according to a Poisson process, the fragment length distribution can be approximated by an exponential distribution, whose parameter is informative about the number of generations since the fragments entered the admixing population [@moorjani_history_2011;@pool_inference_2009; @gravel_population_2012].
+In particular, under a constant recombination rate, the length of introgressed segments should be inversely proportional to the time since the admixture event*[@gravel2012, @liang_nielsen2014]* .  Hence, the length distribution of introgressed chromosomal segments ('recombination clock') can be used to inferred the time since the admixture event [@moorjani_history_2011;@pugach_dating_2011; @sankararaman_date_2012;@loh_inferring_2013;@sankararaman_combined_2016;@pugach_gateway_2018;@jacobs_multiple_2019]  *add hellenthal 2014 science*
 <!-- [add more papers].  -->
 
+*Maybe introduce here the term of admixture pulse*
 To do this, the model usually assumes a one generation long admixture event followed by a period of isolation [@liang_lengths_2014]. The proportion of admixture of individuals in the admixed population is assumed to be identical, tracts are rare and inbreeding is not significant, such that admixture segments do not recombine with each other to form longer segments [@pool_inference_2009].  The effect of drift is assumed to be negligible [@loh_inferring_2013], the introgressed segments act neutral [@shchur_distribution_2019] and the recombination rate does not change over time [@gravel_population_2012].
 <!-- Introduce model assumptions here -->
 <!-- constant recombination rate -->
@@ -80,15 +88,28 @@ As recombination breaks the introgressed chromosomal segments apart each generat
 The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012; @price_sensitive_2009; @lawson_inference_2012]. Multiple methods are available focusing on different characteristics of introgressed haplotypes, such as LD patterns and density of derived variants, to infer them [@lawson_inference_2012; @racimo_signatures_2017; @seguin_orlando_paleogenomics_2014; @vernot_excavating_2016; @sankararaman_combined_2016; @skov_detecting_2018]. In the second step, the length distribution of these directly inferred introgressed haplotypes can be used for dating by fitting an exponential distribution to it.
 
 ##Dates of archaic introgression obtained so far
-The two approaches were used to estimate the Neandertal human admixture to be 37,000–86,000 ya (years ago) [@sankararaman_date_2012] as well as 40,510–54,454 ya (95% CI) [@moorjani_genetic_2016] using modern day genomes and 50,000 to 60,000 ya using an ancient genome [@fu_genome_2014]. An additional contemporaneous admixture event between Neandertals and East-Asian populations was suggested to explain the higher amount of Neandertal ancestry in these populations [@kim_selection_2015; @vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 ya using modern day genomes [@sankararaman_combined_2016]. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differences, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018; @jacobs_multiple_2019]. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovan, one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019].
+*This paragraph is in quite good shape, but I think it is worth highlighting how
+the approaches used differ, and why accuracy was increased over time*
+Both approaches have been used to estimate the time of admixture between Neandertals and modern humans.  Using XXX, Sankararaman et al dated the neandertal-human admixture time to be 37,000–86,000 ya (years ago) [@sankararaman_date_2012]. Later, this data was refined to 40,510–54,454 ya (95% CI) [@moorjani_genetic_2016] *explain why these dates are better estimated*. using modern day genomes and 50,000 to 60,000 ya using an ancient genome [@fu_genome_2014]. An additional contemporaneous *contemporaneous to what?* admixture event between Neandertals and East-Asian populations was suggested to explain the higher amount of Neandertal ancestry in present-day East Asians [@kim_selection_2015; @vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 ya using modern day genomes [@sankararaman_combined_2016] *using what technique?*. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differences, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018; @jacobs_multiple_2019]. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovan, one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019].
 
 <!-- [I would move the intro paragraph ] -->
 
 <!-- What does admixture pulse mean? is it distingushable from a continuous admixtuer? -->
 <!-- the time of the last GF is relevant for Neandertal extinction, hence the extrema of the distribition more important then mean time -->
 
+*this should be at the end of the intro*
 ##What we want to do
-Here we want to further investigate archaic admixture dates. Especially focusing on the Neandertal admixture into modern humans. Archaic admixture events are assumed to be long time in the past, with few, potentially distantly related genomes available from the archaics as proxies for the true introgressing population. We want to investigate the effect of the model and data assumptions on the obtained dates. We are particularly interested in modeling long continuous admixture between Neandertals and modern humans instead of a one generation pulse. Thereby we want to resolve what does a time estimate of a pulse mean, is it distinguishable from a continuous admixture distribution over multiple hundred generations. This could hold implications about the contact between Neandertals and modern humans, e.g. was gene flow a single isolated incident or common over the whole time of their co-existence. Neandertals and modern human populations overlapped in some regions for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations. We are especially interested in the extrema of a continuous admixture distribution, since the start and end point can inform us about the first contact between humans and Neandertals and the time of extinction of Neandertals.
+While good estimates for the mean admixture time between Neandertals and modern humans
+exist, little is known about the duration of the event. In particular, dates
+when admixture ended are of crucial importance, as they are relevant to 
+Neandertals extinction. 
+Here, we perform a simulation study where we  investigate the effect of model 
+and data assumptions on estimated admixture  dates. We show that in many cases
+pulses cannot be distinguished from more continuous admixture events, 
+and so current methods are unsuitable to definitively answer when the contact between 
+Neandertals and modern humans ended. 
+
+*this should go in the discussion*Neandertals and modern human populations overlapped in some regions for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations. We are especially interested in the extrema of a continuous admixture distribution, since the start and end point can inform us about the first contact between humans and Neandertals and the time of extinction of Neandertals.
 
 
 ##Assumptions on the data
@@ -96,27 +117,85 @@ Both approaches, the direct measure of the segment length and the indirect ALD b
 <!-- last sentence changed to be more positive by Ben's recommendationc -->
 
 ### Segments are is independent and identically exponentially distributed
-First, it is assumed that the length of the introgressed segments is independent and identically exponentially distributed. This means that the number of ancestors per admixed individual is identical, such that the proportion of introgressed segments is equal among the individuals. This however is not true for Neandertal admixture in non-African population, since East-Asian population where fund to carry more Neandertal ancestry than other non-African populations [@vernot_complex_2015]. Segments are independent such that segments of the same ancestor do not recombine to form longer segments. Liang and Nielsen 2014 showed that the  violation of the independent and identically exponentially distributed segments length assumption can downward bias admixture time estimates when the true admixture time is very recent, the number of ancestors is small or the admixing population is small. This increases the chance of admixture segments to recombine into a larger segment mimicking a segment length distribution of a more recent admixture [@liang_lengths_2014].
+First, it is assumed that the lengths of the introgressed segments are independent 
+and identically exponentially distributed. This means that the number of ancestors
+per admixed individual is identical, such that the proportion of 
+introgressed segments is equal among the individuals*Is this true? Reference?*. 
+One restriction this puts on the data is that segments of the same ancestor are 
+assumed to recombine into longer segments. This assumption is violated in particular 
+when admixture is very old $(t \approx 2N)$ or very recent $t \approx \log(2N)$ (Liang and Nielsen 2014). 
+*in this paragraph, you repeated yourself a lot. Try to be concise and present
+your argument in one logical sequence whenever possible*
 
 ### Recombination Map
-Second, it is assumed that the recombination rate is known. Since the recombination is used as a clock the correct genetic distance between introgressed segments or variants on the segments has to be known.[this is a repeat] Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available[add refs]. 
+Second, it is assumed that the recombination rates are known. Since the recombination 
+is used as a clock, misspecification of the recombinationn map will lead to over/or 
+underestimates of tract lengths, and admixture times. Crucially, even if the
+length estimation is unbiased, the admixture time estimates can be substantially
+biased *recap what Priya/Sriram
+found about the bias/correction*. 
 
-
+Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available[add refs]. 
 Either focusing on short term information by using parent-offspring data to directly observe recombination events [@coop_high-resolution_2008; @kong_fine-scale_2010], searching for admixture tracts breakpoints [@hinch_landscape_2011; @wegmann_recombination_2011] or long term population averages of recombination inferred by LD [@mcvean_fine-scale_2004; @myers_fine-scale_2005; @hapmap_consortium_2007]. 
 Different genetic maps are highly correlated on a megabase scale but reveal significant population differences on a finer scale [@kong_fine-scale_2010; @hinch_landscape_2011]. The average length of Neandertal introgressed segments is approximately 50 kb [@sankararaman_date_2012], and so fine-scale recombination maps are essential. Furthermore, recombination maps can also vary over time [@auton_fine-scale_2012]. These uncertainties in the genetic map were found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are [@sankararaman_date_2012].  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree map. This however limits the applicability of the method, since it requires a population-specific map as well as a pedigree based map to estimate the error in the map [@sankararaman_date_2012; @fu_genome_2014; @sankararaman_combined_2016].
 
 ### Demography
-A third issue are assumptions about the demography. Demographic processes can create similar genomic signals as admixture. Genomic segments carrying these signals can falsely be included in the estimate of the length distribution of admixed segments, leading to a bias. Admixture segments can also get lost by genetic drift, making it harder to estimate the length distribution. Figure \ref{fig:Intro_fig} B shows two possible demographies for the Neandertal admixture, a simplified one without no population changes and a more complex one including structured populations, bottlenecks and additional gene flow. The extreme reduction in population sizes of the admixing population can create non-admixture LD [@schaper_linkage_2012]. Substructure in an ancestral human population, where human population in Africa are subdivided with a low migration rate, as shown in Figure \ref{fig:Intro_fig} B, can also introduce divergent chromosomal segment with variants in strong LD, mimicking Archaic introgressed segments [@nei_linkage_1973;@pfaff_population_2001]. Moreover additional gene flow after the Neandertal admixture event between the African and admixed non-African population was shown to potentially influence the detected amount of Neandertal ancestry [@petr_limits_2019] as well as the time estimates [@sankararaman_date_2012]. 
+*this section (and frequently your writing in general) could need more structure. 
+One simple approach is the _context-content-conclusion_ system (
+https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005619)
+For this intro section, the basic idea is that for each paragraph you need to 
+make clear that you start by*
+
+1. explaining why we're interested in demography, 
+2. what precisely the issue is
+3. explain what you're gonna do about it
+
+
+A third assumption is that the demographic history of the studied population is
+known. While the recombination clock is relatively robust to population size 
+changes *ref Gravel2012?*, demographic processes can create similar genomic signals as 
+admixture *how*. Genomic segments carrying these signals can falsely be included 
+in the estimate of the length distribution of admixed segments, leading to a bias.  *how?*
+Admixture segments can also get lost by genetic drift, making it harder to 
+estimate the length distribution.*why?* 
+Figure \ref{fig:Intro_fig} B shows two possible demographies for the Neandertal 
+admixture, a simplified one without no population changes and a more complex one 
+including structured populations, bottlenecks and additional gene flow. 
+The extreme reduction in population sizes of the admixing population can create 
+non-admixture LD [@schaper_linkage_2012]. Substructure in an ancestral human 
+population, where human population in Africa are subdivided with a low migration 
+rate, as shown in Figure \ref{fig:Intro_fig} B, can also introduce divergent 
+chromosomal segment with variants in strong LD, mimicking Archaic introgressed 
+segments [@nei_linkage_1973;@pfaff_population_2001]. Moreover additional gene flow after the Neandertal admixture event between the African and admixed non-African population was shown to potentially influence the detected amount of Neandertal ancestry [@petr_limits_2019] as well as the time estimates [@sankararaman_date_2012]. 
 <!-- Not sure about the last sentence -->
 <!-- Drift biasing admixture citation needed -->
 
-### Ascertainment
-An additional bias might be introduced in the ALD based dating method since it requires ascertaining the SNPs for admixture informative sites, especially for archaic admixture [@sankararaman_date_2012; @fu_genome_2014]. The problem here is that introgressed variants from the ancestral archaic population are ascertained using only a few sequenced archaic individuals as proxies for the actual introgressing archaic population. These individuals are potentially only distantly related to the introgressing population, which might result in missing introgressed variants. 
+### Methodological bias through ascertainment 
+An additional bias might be introduced in the ALD based dating method since it requires 
+ascertaining the SNPs for admixture informative sites, especially for archaic 
+admixture [@sankararaman_date_2012; @fu_genome_2014]. *explain briefly why this
+is necessary, and how exactly this is done*
+The problem here is that  introgressed variants from the ancestral archaic 
+population are ascertained using only a few sequenced archaic individuals as 
+proxies for the actual introgressing archaic population. These individuals are 
+potentially only distantly related to the introgressing population, which might 
+result in missing introgressed variants. 
 <!-- What to cite for the last sentence?? -->
 
-### Pulse model
-Finally, the admixture is assumed to happened in only a single generation [@moorjani_history_2011]. This single pulse is mathematically convenient since all the introgressed segments entering in this single generation can be modeled using a single exponential distribution. This however limits the information gained form the dating since in case of a multi-generation long admixture the single-pulse model results in a mean admixture time between start end end of the gene flow. Ideally one would like to obtain the start and end, hence the duration of admixture between Neandertals and non-African populations. 
-If admixture is happening over $n$ generations, this results in a mixture of $n$ different exponential distribution one for each set of introgressed segments per generation [@pickrell_ancient_2014].  Previous studies tried to model this, using the ALD, by assuming not a continuous admixture but summarizing it into different independent events. In this case, the decay curve is comprised out of $n$ different exponential terms, each for one admixture event [@pickrell_ancient_2014; @zhou_inference_2017]. Methods were introduced to model continuous admixture using a polynomial function with the number of coefficients related to the number of generations of continuous admixture [@zhou_modeling_2017]. These models however work best with recent admixture, in the last 100 generations, with a substantial admixture proportion of around 0.3 [@zhou_modeling_2017]. This is outside of the range for scenarios of Neandertal admixture, were the admixture proportion is around 0.03 and the timing around 1500 generations ago [@sankararaman_date_2012;@prufer_complete_2013;@sankararaman_genomic_2014].
+### The Pulse Assumption
+Finally, the admixture is assumed to happened in only a single generation [@moorjani_history_2011]. This single pulse is mathematically convenient since all the introgressed segments entering 
+in this single generation can be modeled using a single exponential distribution. 
+This however limits the information gained form the dating since in case of a 
+multi-generation long admixture the single-pulse model results in a mean admixture 
+time between start end end of the gene flow. Ideally one would like to obtain 
+the start and end, hence the duration of admixture between Neandertals and non-African populations. *preceeding section could be merged with last intro paragraph*
+If admixture is happening over $n$ generations, this results in a mixture of $n$ 
+different exponential distribution, one for the segments entered in each generation 
+[@pickrell_ancient_2014].  Previous studies tried to model this, using the ALD, 
+by assuming not a continuous admixture but summarizing it into different 
+independent events. In this case, the decay curve is comprised out of $n$ 
+different exponential terms, each for one admixture event 
+[@pickrell_ancient_2014; @zhou_inference_2017]. Methods were introduced to model continuous admixture using a polynomial function with the number of coefficients related to the number of generations of continuous admixture [@zhou_modeling_2017]. These models however work best with recent admixture, in the last 100 generations, with a substantial admixture proportion of around 0.3 [@zhou_modeling_2017]. This is outside of the range for scenarios of Neandertal admixture, were the admixture proportion is around 0.03 and the timing around 1500 generations ago [@sankararaman_date_2012;@prufer_complete_2013;@sankararaman_genomic_2014].
 <!-- zhou_modeling_2017-tested on simulations with no changes in Ne, Admixture proportion of 30% and uniform recombnation [@zhou_modeling_2017]-->
 <!-- Fitting this polynomial functions is not trivial -->
 
