Hybridization reviews add

--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -1101,6 +1101,67 @@ PaperClip},
 	file = {Inference of Historical Changes in Migration Rate From the Lengths of Migrant Tracts | Genetics:/home/leonardo_iasi/Zotero/storage/UCSH46PA/711.html:text/html}
 }
 
+
+@article{payseur_genomic_2016,
+	title = {A genomic perspective on hybridization and speciation},
+	volume = {25},
+	issn = {0962-1083},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4915564/},
+	doi = {10.1111/mec.13557},
+	abstract = {Hybridization among diverging lineages is common in nature. Genomic data provide a special opportunity to characterize the history of hybridization and the genetic basis of speciation. We review existing methods and empirical studies to identify recent advances in the genomics of hybridization, as well as issues that need to be addressed. Notable progress has been made in the development of methods for detecting hybridization and inferring individual ancestries. However, few approaches reconstruct the magnitude and timing of gene flow, estimate the fitness of hybrids or incorporate knowledge of recombination rate. Empirical studies indicate that the genomic consequences of hybridization are complex, including a highly heterogeneous landscape of differentiation. Inferred characteristics of hybridization differ substantially among species groups. Loci showing unusual patterns – which may contribute to reproductive barriers – are usually scattered throughout the genome, with potential enrichment in sex chromosomes and regions of reduced recombination. We caution against the growing trend of interpreting genomic variation in summary statistics across genomes as evidence of differential gene flow. We argue that converting genomic patterns into useful inferences about hybridization will ultimately require models and methods that directly incorporate key ingredients of speciation, including the dynamic nature of gene flow, selection acting in hybrid populations and recombination rate variation.},
+	pages = {2337--2360},
+	number = {11},
+	journaltitle = {Molecular ecology},
+	shortjournal = {Mol Ecol},
+	author = {Payseur, Bret A. and Rieseberg, Loren H.},
+	urldate = {2020-02-26},
+	date = {2016-06},
+	pmid = {26836441},
+	pmcid = {PMC4915564},
+	file = {PubMed Central Full Text PDF:/home/leonardo_iasi/Zotero/storage/MQ6UENZB/Payseur and Rieseberg - 2016 - A genomic perspective on hybridization and speciat.pdf:application/pdf}
+}
+
+@article{harrison_hybridization_2014,
+	title = {Hybridization, Introgression, and the Nature of Species Boundaries},
+	volume = {105},
+	issn = {0022-1503},
+	url = {https://academic.oup.com/jhered/article/105/S1/795/2961884},
+	doi = {10.1093/jhered/esu033},
+	abstract = {Species can be defined as populations that are diagnosably distinct, reproductively isolated, cohesive, or exclusive groups of organisms. Boundaries between spe},
+	pages = {795--809},
+	issue = {S1},
+	journaltitle = {Journal of Heredity},
+	shortjournal = {J Hered},
+	author = {Harrison, Richard G. and Larson, Erica L.},
+	urldate = {2020-02-26},
+	date = {2014-01-01},
+	langid = {english},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/VZNAM8X9/Harrison and Larson - 2014 - Hybridization, Introgression, and the Nature of Sp.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/S9YSXDH3/2961884.html:text/html}
+}
+
+@article{hellenthal_genetic_2014,
+	title = {A Genetic Atlas of Human Admixture History},
+	volume = {343},
+	rights = {Copyright © 2014, American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/343/6172/747},
+	doi = {10.1126/science.1243518},
+	abstract = {Modern genetic data combined with appropriate statistical methods have the potential to contribute substantially to our understanding of human history. We have developed an approach that exploits the genomic structure of admixed populations to date and characterize historical mixture events at fine scales. We used this to produce an atlas of worldwide human admixture history, constructed by using genetic data alone and encompassing over 100 events occurring over the past 4000 years. We identified events whose dates and participants suggest they describe genetic impacts of the Mongol empire, Arab slave trade, Bantu expansion, first millennium {CE} migrations in Eastern Europe, and European colonialism, as well as unrecorded events, revealing admixture to be an almost universal force shaping human populations.
+The in-Laws Through History
+Admixture, the result of previously distant populations meeting and breeding, leaves a genetic signal within the descendants' genomes. However, over time the signal decays and can be hard to trace. Hellenthal et al. (p. 747) describe a method, using a technique called chromosome painting, to follow the genetic traces of admixture back to the nearest extant population. The approach revealed details of worldwide human admixture history over the past 4000 years.
+Evidence of human migrations over the past 4000 years is identified in existing genomes.
+Evidence of human migrations over the past 4000 years is identified in existing genomes.},
+	pages = {747--751},
+	number = {6172},
+	journaltitle = {Science},
+	author = {Hellenthal, Garrett and Busby, George B. J. and Band, Gavin and Wilson, James F. and Capelli, Cristian and Falush, Daniel and Myers, Simon},
+	urldate = {2020-02-26},
+	date = {2014-02-14},
+	langid = {english},
+	pmid = {24531965},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/IPXFIRA5/Hellenthal et al. - 2014 - A Genetic Atlas of Human Admixture History.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/7XG8WSCI/747.html:text/html}
+}
+
 @article{pugach_gateway_2018,
 	title = {The {Gateway} from {Near} into {Remote} {Oceania}: {New} {Insights} from {Genome}-{Wide} {Data}},
 	volume = {35},
